@@ -24,7 +24,8 @@ int main(int argc, char * argv[])
   
   //Initialise stuff for the run
   struct runpar run;
-  setconstants();    //Set the global constants (which are variable in C). This routine should eventually disappear.
+  setconstants();                       //Set the global constants (which are variable in C)
+  setParameterNames(&run);              //Set the names of the parameters in the hardcoded parameter database
   sprintf(run.infilename,"mcmc.input"); //Default input filename
   if(argc > 1) sprintf(run.infilename,argv[1]);
   
